# fervent

./: .gitignore  README.md  index.html  package.json
public/brand/: README.md  make-icns.sh
scripts/: build-sidecar.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  app.manifest  app.rc  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/FerventSensor/: FerventSensor.csproj  Program.cs
src-tauri/src/: lib.rs  macos_smc.rs  main.rs  temps.rs
src/components/: Gauge.tsx  Kpi.tsx  Menu.tsx  TrafficLights.tsx  Tube.tsx  UnitToggle.tsx  glass-card.tsx  traffic-lights.tsx  unit-toggle.tsx
src/engine/: Atmosphere.tsx  Particles.tsx  SparkLine.tsx  heat-provider.tsx  helpers.ts
src/widgets/: WidgetConsole.tsx  widget-console.tsx
