[package]
name = "fervent"
version = "0.1.0"
description = "Fervent — temperature widget"
authors = ["Denni Bevilacqua"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fervent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"

# Windows-only: WMI sensor fallback
[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.14"

# Linux-only: hwmon temperature via /sys/class/hwmon
[target.'cfg(target_os = "linux")'.dependencies]
sysinfo = "0.33"

# macOS-only: SMC/IOKit temperature reading (FFI — no extra native deps)
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
